Fix results overflowing out of their container

--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ body {
     border-width: 4px;
     border-style: solid;
     border-color: #647692;
+    overflow-y: auto;
+    scrollbar-width: none; /* for Firefox */
+}
+
+.results-container::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 
 .tally-container{
